--- a/_posts/2021-04-20-花粉症と東洋医学.md
+++ b/_posts/2021-04-20-花粉症と東洋医学.md
@@ -35,7 +35,7 @@ description: "春の辛い症状はツボ押しで乗り切ろう"
 ツボ
 ##### 陥谷
 >顔面、顔で特に目の周りが晴れているときに使う　胃腸障害や目の周りがすっきりしない時や首の付け根が張っているときに使う
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=OWtuK1pR6kQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/OWtuK1pR6kQ" title="ツボ・陥谷(かんこく)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 ##### 外関
@@ -43,4 +43,4 @@ description: "春の辛い症状はツボ押しで乗り切ろう"
 >花粉症は体の浅いところで起こっている
 >触れたとき冷えているときは温めたり灸をするのもよい。
 >温めるのが嫌な時は揉捏や鍼もあり。
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=2d2Y4jqSvD4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2d2Y4jqSvD4" title="ツボ・外関(がいかん)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
