Revert "new post 4-13"
This reverts commit 393866091c540faacc8251795b2a79d62aaba94b.

--- a/_posts/2021-04-20-花粉症と東洋医学.md
+++ b/_posts/2021-04-20-花粉症と東洋医学.md
@@ -3,7 +3,7 @@ layout: post
 read_time: true
 show_date: true
 date: 2021-04-20
-img: posts/post8-rembrandt.jpg
+img: posts/20210420/post8-rembrandt.jpg
 tags: [東洋医学, 春の養生, 花粉症, アレルギー, ツボ, くしゃみ, せき]
 category: opinion
 description: "春の辛い症状はツボ押しで乗り切ろう"
