font-size changed

--- a/_posts/2021-04-20-花粉症と東洋医学.md
+++ b/_posts/2021-04-20-花粉症と東洋医学.md
@@ -11,30 +11,32 @@ description: "春の辛い症状はツボ押しで乗り切ろう"
 
 ### 春の邪気　風邪『ふうじゃ』
 
-花粉や黄砂は春の風に乗ってやってくる
-これらは外邪で東洋医学的には風邪と考えられる。症状も"カゼ"にどことなく似ている
-外の気温が上昇してくる春は体の熱も上に上がりやすい。また、風邪は陽邪の一種であるから上焦に症状が出やすい。
+花粉や黄砂は春の風に乗ってやってくる  
+これらは外邪で東洋医学的には風邪と考えられる。  
+症状も"カゼ"にどことなく似ている  
+外の気温が上昇してくる春は体の熱も上に上がりやすい。  
+また、風邪は陽邪の一種であるから上焦に症状が出やすい。
 
 ### 症状
-目鼻耳にアレルギー症状が出る（足に出たりすることはない）すべて体の上の症状に出る。
-そのため治療中に頭を触ることも多い
-この場合、実証として硬くなって張っている場合が多い。
+目鼻耳にアレルギー症状が出る（肺領域である皮膚を冒すため足に症状が出ることもあるが、基本的に体の上の方に症状に出やすい。  
+そのため治療中に頭を触ることも多い  
+この場合、実証として硬くなって張っている場合が多い。  
 風邪をひいてときみたいにぼおっとなって熱っぽいのに似ている。
 
-患者の主訴でも頭が重たくなっているように感じる
-患者の頭に触れると指を通して頭の周りが硬くなっているのを感じる
-おでこもはれている
-左右のバランスも目安になる
-良い変化が感じられたら治療を終了する。
+患者の主訴でも頭が重たくなっているように感じる  
+患者の頭に触れると指を通して頭の周りが硬くなっているのを感じる  
+おでこもはれている  
+左右のバランスも目安になる  
+良い変化が感じられたら治療を終了する。  
 
 ### 治療法
-ツボの配分を考える
-変わらなかったら時間がかかる症状である可能性が高い。
+ツボの配分を考える  
+変わらなかったら時間がかかる症状である可能性が高い。  
 
-ツボ
+### 経穴
 ##### 陥谷
 >顔面、顔で特に目の周りが晴れているときに使う　胃腸障害や目の周りがすっきりしない時や首の付け根が張っているときに使う
-<iframe width="560" height="315" src="https://www.youtube.com/embed/OWtuK1pR6kQ" title="ツボ・陥谷(かんこく)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/OWtuK1pR6kQ" title="ツボ・陥谷(かんこく)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 ##### 外関
@@ -42,4 +44,4 @@ description: "春の辛い症状はツボ押しで乗り切ろう"
 >花粉症は体の浅いところで起こっている
 >触れたとき冷えているときは温めたり灸をするのもよい。
 >温めるのが嫌な時は揉捏や鍼もあり。
-<iframe width="560" height="315" src="https://www.youtube.com/embed/2d2Y4jqSvD4" title="ツボ・外関(がいかん)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/2d2Y4jqSvD4" title="ツボ・外関(がいかん)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
