--- a/_posts/2021-04-13-食と健康.md
+++ b/_posts/2021-04-13-食と健康.md
@@ -4,7 +4,7 @@ read_time: true
 show_date: true
 date: 2021-04-13
 img: posts/kanpo.jpg
-tags: [健康, 東洋医学, 気功, 風水, 食事 ]
+tags: [東洋医学, 気功, 風水, 食事 ]
 category: opinion
 description: "食と健康について考えたいと思います"
 ---
