--- a/_posts/2021-04-20-花粉症と東洋医学.md
+++ b/_posts/2021-04-20-花粉症と東洋医学.md
@@ -4,7 +4,7 @@ read_time: true
 show_date: true
 date: 2021-04-20
 img: posts/kafun.jpg
-tags: [東洋医学, 春の養生, 花粉症, アレルギー, ツボ, くしゃみ, せき]
+tags: [東洋医学, 春の養生, アレルギー, ツボ, 風邪]
 category: opinion
 description: "春の辛い症状はツボ押しで乗り切ろう"
 ---
