--- a/_posts/2023-05-23-医の心.md
+++ b/_posts/2023-05-23-医の心.md
@@ -2,7 +2,8 @@
 layout: post
 read_time: true
 show_date: true
-img: posts/kafun.jpg
+date: 2023-05-23
+img: posts/inori.jpg
 tags: [東洋医学, 春の養生, アレルギー, ツボ, 風邪]
 category: opinion
 description: "常に初心に立ち返りたい"
