--- a/_posts/2023-05-23-医の心.md
+++ b/_posts/2023-05-23-医の心.md
@@ -4,7 +4,7 @@ read_time: true
 show_date: true
 date: 2023-05-23
 img: posts/inori.jpg
-tags: [東洋医学, 春の養生, アレルギー, ツボ, 風邪]
+tags: []
 category: opinion
 description: "常に初心に立ち返りたい"
 ---
@@ -24,7 +24,7 @@ description: "常に初心に立ち返りたい"
 人が陽徳を行えば他の人がそれを知って報いてくれる。  
 もし人が陰徳を行えば、人間なかまではわからないが鬼神が報いてくれる。人が陽悪を行えば人間のなかまで報い、人が陰悪を行えば鬼神がこれに報いる、と。  
 
-### 祈りつづけ
+### 祈りつづける
 
 今一度、上記のことを頭に叩き込みつつ、今後も邁進していきたい。
 
