--- a/_posts/2023-05-23-医の心.md
+++ b/_posts/2023-05-23-医の心.md
@@ -32,4 +32,4 @@ description: "常に初心に立ち返りたい"
 >日本語の「いのり」の語源は「生きる（い）ことを宣べる（のり）」  
 >つまり、自分の行動を宣言することなのです。
 
-<small>引用元[祈りの本当の意味とは？「いのり」に秘められた語源、願いとの違い](https://mainomichi.com/mblog/about-prayer/)</small>
+<small>引用元: [祈りの本当の意味とは？「いのり」に秘められた語源、願いとの違い](https://mainomichi.com/mblog/about-prayer/)</small>
