title english encoding

--- a/_posts/2022-05-23-open.md
+++ b/_posts/2022-05-23-open.md
@@ -9,4 +9,4 @@ category: opinion
 description: ""
 ---
 
-[はりきゅうサロンくるみの樹](https://www.shinq-compass.jp/salon/detail/36130)を開業しました。
+[はりきゅうサロンくるみの樹](https://www.shinq-compass.jp/salon/detail/36130)を開院しました。
